fix: horizontal overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 
 :root {
   color-scheme: dark;
+  overflow-x: hidden;
 }
 
 html {
